--- a/HumanAssistance/humanintheloop.ipynb
+++ b/HumanAssistance/humanintheloop.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9e5b6c53",
    "metadata": {},
    "outputs": [],
@@ -31,8 +31,7 @@
     "\n",
     "class State(TypedDict):\n",
     "    messages: Annotated[list, add_messages]\n",
-    "\n",
-    "graph_builder = StateGraph(State)\n"
+    "\n"
    ]
   },
   {
@@ -85,11 +84,13 @@
    "cell_type": "markdown",
    "id": "d870aefe",
    "metadata": {},
-   "source": []
+   "source": [
+    "## graph with human assistance tool"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d36250d3",
    "metadata": {},
    "outputs": [
@@ -105,6 +106,9 @@
     }
    ],
    "source": [
+    "\n",
+    "graph_builder = StateGraph(State)\n",
+    "\n",
     "@tool\n",
     "def human_assistance(query:str)->str:\n",
     "    \"\"\"Request assistance from a human.\"\"\"\n",
@@ -226,14 +230,6 @@
     "    if \"messages\" in event:\n",
     "        event[\"messages\"][-1].pretty_print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "352641c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
